--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -34,5 +34,41 @@
     "setting": "الإعدادات",
     "logout": "تسجيل خروج",
     "components": "المنتجات",
-    "start_now": "ابدأ الآن"
+    "start_now": "ابدأ الآن",
+    "item_in_cart":"منتج داخل السلة",
+    "continue_shipping": "استكمال الشراء",
+    "checkout": "الدفع",
+    "nodata": "لا توجد بيانات ....",
+    "order_review": "مراجعة الطلب",
+    "client_name": "اسم العميل: ",
+    "address": "العنوان: ",
+    "order": "الطلب: ",
+    "total_price": "إجمالى السعر: ",
+    "date": "التاريخ: ",
+    "status": "حالة الطلب: ", 
+    "edit_order": "تعديل الطلب", 
+    "cancel": "الغاء",
+    "added":"تم اضافة المنتج بنجاح",
+    "edit":"تعديل",
+    "height":"الطول",
+    "weight":"الوزن",
+    "profile":"حسابى",
+    "save":"حفظ",
+    "discard_edits":"الغاء التعديلات",
+    "camera":"كاميرا",
+    "gallery":"المعرض",
+    "today":"اليوم",
+    "dinner":"العشاء",
+    "breakfast":"الفطار",
+    "lunch":"الغداء",
+    "evening":"العشاء",
+    "snack":"وجبة",
+    "complete":"استكمل",
+    "days_left":"الايام متبقية",
+    "day":"يوم",
+    "great":"عظيم !",
+    "achived":"انت حققت",
+    "finish":"انتهيت اذهب للرئيسية<<<",
+    "next":"اليوم التالى"
+
 }
