--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,39 +1,77 @@
 {
-    "welcome":"Welcome !",
-    "login":"LOGIN",
-    "sign_up":"SIGNUP",
-    "phone":"Phone",
-    "password":"Password",
-    "name":"Name",
-    "location":"Location",
-    "birthdate":"BirthDate",
-    "gender":"Gender",
-    "male":"Male",
-    "female":"Female",
-    "confirm_pass":"Confirm Password",
-    "hint_msg":"enter {attribute} ...." ,
-    "validate_msg":"please enter {attribute} ...." ,
-    "max_validate_msg":"{attribute} must at least {num} charchter !!" ,
-    "same_validate_msg":"{attribute} not a same !!" ,
-    "error404":"Something went wrong !!" ,
-    "loadingTitle":"Loading....",
-    "loadingdesc":"please wait",
-    "error":"Error",
-    "ok":"OK",
-    "success":"Done Successfully",
-    "recommended":"Recommended",
-    "courses":"Courses",
-    "search":"search..." , 
-    "home":"Home",
-    "my_course":"My Course",
-    "shop":"Shop",
-    "cart":"cart",
-    "orders":"Orders",
-    "setting":"Settings",
-    "logout":"Logout",
-    "components":"Components",
-"start_now":"Start Now"
-   
+    "welcome": "Welcome !",
+    "login": "LOGIN",
+    "sign_up": "SIGNUP",
+    "phone": "Phone",
+    "password": "Password",
+    "name": "Name",
+    "location": "Location",
+    "birthdate": "BirthDate",
+    "gender": "Gender",
+    "male": "Male",
+    "female": "Female",
+    "confirm_pass": "Confirm Password",
+    "hint_msg": "enter {attribute} ....",
+    "validate_msg": "please enter {attribute} ....",
+    "max_validate_msg": "{attribute} must at least {num} charchter !!",
+    "same_validate_msg": "{attribute} not a same !!",
+    "error404": "Something went wrong !!",
+    "loadingTitle": "Loading....",
+    "loadingdesc": "please wait",
+    "error": "Error",
+    "ok": "OK",
+    "success": "Done Successfully",
+    "recommended": "Recommended",
+    "courses": "Courses",
+    "search": "search...",
+    "home": "Home",
+    "my_course": "My Course",
+    "shop": "Shop",
+    "cart": "cart",
+    "orders": "Orders",
+    "setting": "Settings",
+    "logout": "Logout",
+    "components": "Components",
+    "start_now": "Start Now",
+    "item_in_cart": "item in cart",
+    "continue_shipping": "Continue Shipping",
+    "checkout": "Checkout",
+    "nodata": "No Data Found ....",
+    "order_review": "Order review",
+    "client_name": "Client Name: ",
+    "address": "Address: " ,
+    "order": "Order: ",
+    "total_price": "Total Price: ",
+    "date": "Date: ",
+    "status": "Status: ", 
+    "edit_order": "Edit Order", 
+    "cancel": "Cancel",
+    "added": "Product added to cart successfully",
+    "edit":"edit",
+    "height":"Height",
+    "weight":"Weight",
+    "profile":"Profile",
+    "save":"Save",
+    "discard_edits":"Discard Edits",
+    "camera":"Camera",
+    "gallery":"Gallery",
+    "today":"Today",
+    "dinner":"Dinner",
+    "breakfast":"BreakFast",
+    "lunch":"Lunch",
+    "evening":"Evening",
+    "snack":"Snack",
+    "complete":"Complete",
+    "days-left":"Days Left",
+    "day":"day",
+    "great":"Great !",
+    "achived":"You are achieved",
+    "finish":"Finish Go Home >>>",
+    "next":"Next Day >>"
+
 
     
+
+
+
 }
