--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -22,6 +22,7 @@
     "loadingdesc": "انتظر من فضلك",
     "error": "خطأ",
     "ok": "تم",
+    "done": "تم",
     "success": "تم ال{attribute} بنحاح",
     "recommended": "الكورس المقترح",
     "courses": "الكورسات",
@@ -68,7 +69,7 @@
     "day":"يوم",
     "great":"عظيم !",
     "achived":"انت حققت",
-    "finish":"انتهيت اذهب للرئيسية<<<",
+    "finish":"انتهيت اذهب للرئيسية >>>",
     "next":"اليوم التالى"
 
 }
