--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,7 +1,9 @@
 {
     "welcome": "Welcome !",
     "login": "LOGIN",
+    "login_full": "Login",
     "sign_up": "SIGNUP",
+    "sign_up_full": "Signup",
     "phone": "Phone",
     "password": "Password",
     "name": "Name",
@@ -20,6 +22,7 @@
     "loadingdesc": "please wait",
     "error": "Error",
     "ok": "OK",
+    "done": "Done",
     "success": "Done Successfully",
     "recommended": "Recommended",
     "courses": "Courses",
@@ -62,7 +65,7 @@
     "evening":"Evening",
     "snack":"Snack",
     "complete":"Complete",
-    "days-left":"Days Left",
+    "days_left":"Days Left",
     "day":"day",
     "great":"Great !",
     "achived":"You are achieved",
