start at support screan

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -70,6 +70,10 @@
     "great":"عظيم !",
     "achived":"انت حققت",
     "finish":"انتهيت اذهب للرئيسية >>>",
-    "next":"اليوم التالى"
-
+    "next":"اليوم التالى",
+    "ar":"عربى",
+    "en":"انجليزى",
+    "lang":"اللغة",
+    "country":"الدولة"
+,"support":"الدعم الفنى"
 }
