--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -36,7 +36,7 @@
     "logout": "تسجيل خروج",
     "components": "المنتجات",
     "start_now": "ابدأ الآن",
-    "item_in_cart":"منتج داخل السلة",
+    "item_in_cart": "منتج داخل السلة",
     "continue_shipping": "استكمال الشراء",
     "checkout": "الدفع",
     "nodata": "لا توجد بيانات ....",
@@ -46,34 +46,50 @@
     "order": "الطلب: ",
     "total_price": "إجمالى السعر: ",
     "date": "التاريخ: ",
-    "status": "حالة الطلب: ", 
-    "edit_order": "تعديل الطلب", 
+    "status": "حالة الطلب: ",
+    "edit_order": "تعديل الطلب",
     "cancel": "الغاء",
-    "added":"تم اضافة المنتج بنجاح",
-    "edit":"تعديل",
-    "height":"الطول",
-    "weight":"الوزن",
-    "profile":"حسابى",
-    "save":"حفظ",
-    "discard_edits":"الغاء التعديلات",
-    "camera":"كاميرا",
-    "gallery":"المعرض",
-    "today":"اليوم",
-    "dinner":"العشاء",
-    "breakfast":"الفطار",
-    "lunch":"الغداء",
-    "evening":"العشاء",
-    "snack":"وجبة",
-    "complete":"استكمل",
-    "days_left":"الايام متبقية",
-    "day":"يوم",
-    "great":"عظيم !",
-    "achived":"انت حققت",
-    "finish":"انتهيت اذهب للرئيسية >>>",
-    "next":"اليوم التالى",
-    "ar":"عربى",
-    "en":"انجليزى",
-    "lang":"اللغة",
-    "country":"الدولة"
-,"support":"الدعم الفنى"
+    "added": "تم اضافة المنتج بنجاح",
+    "edit": "تعديل",
+    "height": "الطول",
+    "weight": "الوزن",
+    "profile": "حسابى",
+    "save": "حفظ",
+    "discard_edits": "الغاء التعديلات",
+    "camera": "كاميرا",
+    "gallery": "المعرض",
+    "today": "اليوم",
+    "dinner": "العشاء",
+    "breakfast": "الفطار",
+    "lunch": "الغداء",
+    "evening": "العشاء",
+    "snack": "وجبة",
+    "complete": "استكمل",
+    "days_left": "الايام متبقية",
+    "day": "يوم",
+    "great": "عظيم !",
+    "achived": "انت حققت",
+    "finish": "انتهيت اذهب للرئيسية >>>",
+    "next": "اليوم التالى",
+    "ar": "عربى",
+    "en": "انجليزى",
+    "lang": "اللغة",
+    "country": "الدولة",
+    "support": "الدعم الفنى",
+    "customer_service": "خدمة العملاء",
+    "title": "العنوان",
+    "subject": "الموضوع",
+    "help_title": "اخبرنا كيف يمكننا مساعدتك",
+    "help_desc": "فريقنا على أهبة الاستعداد \n للخدمة والدعم.",
+    "send": "ارسال",
+    "discard": "تجاهل",
+    "go_to_home": "اذهب للرئيسية",
+    "continueChating": "متابعة المحادثة",
+    "add_ticket_title_success": "تم ارسال شكوتك بنجاح",
+    "add_ticket_desc_success": "سيرد الدعم في الوقت المتاح قريبًا",
+    "add_order_title_success": "تم ارسال الطلب بنجاح",
+    "add_order_desc_success": "يمكننا تتبع التسليم في قسم الطلبات",
+    "conversation": "المحادثة",
+    "message": "الرسالة...",
+    "alltickets":"الشكاوى"
 }
